@@ -1,0 +1,234 @@
+<!DOCTYPE html>
+<head>
+<script type='application/ld+json'>
+{"@context": "https://schema.org", "@graph": [{"@type": "Article", "headline": "KPOP \u56db\u5927\u5929\u5718\u9f4a\u767c\u65b0\u5c08\u8f2f\uff01TXT\u3001aespa\u3001The Boyz\u3001Boynextdoor \u76db\u5927\u56de\u6b78\uff0c12 \u6708\u9996\u5834\u55ae\u7368\u6f14\u5531\u6703\u9707\u64bc\u6a02\u8ff7", "description": "KPOP \u56db\u5927\u5929\u5718\u9f4a\u767c\u65b0\u5c08\u8f2f\uff01TXT\u3001aespa\u3001The Boyz\u3001Boynextdoor \u76db\u5927\u56de\u6b78\uff0c12 \u6708\u9996\u5834\u55ae\u7368\u6f14\u5531\u6703\u9707\u64bc\u6a02\u8ff7", "url": "https://www.famechos.me/news/KPOP \u56db\u5927\u5929\u5718\u9f4a\u767c\u65b0\u5c08\u8f2f\uff01TXT\u3001aespa\u3001The Boyz\u3001Boynextdoor \u76db\u5927\u56de\u6b78\uff0c12 \u6708\u9996\u5834\u55ae\u7368\u6f14\u5531\u6703\u9707\u64bc\u6a02\u8ff7/", "image": "https://www.famechos.me/images/banner.jpg", "datePublished": "2024-10-08T12:12:21.607940+08:00", "author": {"@type": "Person", "name": "Famechos"}, "publisher": {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me"}}, {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me", "logo": "https://www.famechos.me/icons/favicon.png"}, {"@type": "WebSite", "name": "Famechos", "url": "https://www.famechos.me"}]}
+</script>
+<link rel="canonical" href="https://www.famechos.me/news/KPOP 四大天團齊發新專輯！TXT、aespa、The Boyz、Boynextdoor 盛大回歸，12 月首場單獨演唱會震撼樂迷/"/>
+<meta name="description" content="KPOP 四大天團齊發新專輯！TXT、aespa、The Boyz、Boynextdoor 盛大回歸，12 月首場單獨演唱會震撼樂迷。最新專輯、演唱會情報，讓樂迷們期待不已！" />
+
+<meta name="keywords" content="KPOP,TXT,aespa,The Boyz,Boynextdoor,新專輯,單獨演唱會,12月,樂迷,四大天團" />
+
+	<link rel="stylesheet" href="../main-nav.css">
+	<link rel="stylesheet" href="../main-content.css">
+	<link rel="stylesheet" href="../main-small.css">
+	<link rel="stylesheet" href="../post.css">
+	<link rel="stylesheet" href="../main-footer.css">
+	<link rel="stylesheet" href="../news.css">
+ 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"> 
+	<link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosanstc.css">
+        <meta property="og:url" content="https://www.famechos.me/news/KPOP 四大天團齊發新專輯！TXT、aespa、The Boyz、Boynextdoor 盛大回歸，12 月首場單獨演唱會震撼樂迷/" />
+        <meta property="og:title" content="KPOP 四大天團齊發新專輯！TXT、aespa、The Boyz、Boynextdoor 盛大回歸，12 月首場單獨演唱會震撼樂迷" />
+        <meta property="og:description" content="KPOP 四大天團齊發新專輯！TXT、aespa、The Boyz、Boynextdoor 盛大回歸，12 月首場單獨演唱會震撼樂迷" />
+        <meta property="og:image" content="https://www.famechos.me/images/banner.jpg" />
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:title" content="KPOP 四大天團齊發新專輯！TXT、aespa、The Boyz、Boynextdoor 盛大回歸，12 月首場單獨演唱會震撼樂迷" />
+        <meta property="twitter:description" content="KPOP 四大天團齊發新專輯！TXT、aespa、The Boyz、Boynextdoor 盛大回歸，12 月首場單獨演唱會震撼樂迷" />
+        <meta property="twitter:image" content="https://www.famechos.me/images/banner.jpg" />
+	<meta name="theme-color" content="white">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:locale" content="zh_TW" />
+        <meta property="og:site_name" content="Famechos" />
+	<meta property="og:type" content="article" />
+	<meta name="robots" content="index, follow" />
+	<meta name="author" content="Famechos" />
+        <meta name="referrer" content="origin">
+	<meta name="apple-mobile-web-app-capable" content="yes"/>
+        <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+        <meta name="apple-mobile-web-app-title" content="Avoir"/>
+        <meta name="apple-touch-fullscreen" content="yes"/>
+        
+<style> * {box-sizing: border-box;margin: 0;padding: 0;font-family: 'Noto Sans TC', sans-serif;scroll-behavior: smooth;}</style>
+
+</head>
+
+<body>
+
+<nav class="nav">
+    <div class="nav-outerbox">
+      <div class="nav-inner-left">
+        <div class="nav-name-logo">
+          <img class="famechos-logo" src="../img/famechos_logo.png">
+          
+        </div>
+        <div class="nav-separate">
+          <p>|</p>
+        </div>
+        <div class="nav-type-1 nav-type">
+          <button class="nav-type-btn1 nav-type-btn">
+          <h2>K-POP</h2>
+        </button>
+  
+        </div>
+        <div class="nav-type-2 nav-type">
+          <button class="nav-type-btn2 nav-type-btn">
+          <h2>J-POP</h2>
+        </button>
+  
+        </div>
+        <div class="nav-type-3 nav-type">
+          <button class="nav-type-btn3 nav-type-btn">
+          <h2>影視</h2>
+        </button>
+          
+        </div>
+        <div class="nav-type-4 nav-type">
+          <button class="nav-type-btn4 nav-type-btn">
+          <h2>其他</h2>
+        </button>
+        </div>  
+      </div>
+      <div class="nav-inner-right">
+        <div class="nav-feedback-outer">
+          <button class="feedback-btn nav-type-btn">
+            <i class="bi bi-headset"></i>
+          </button>
+        </div>
+        <div class="nav-setting">
+          <button class="setting-btn nav-type-btn">
+            <i class="bi bi-gear"></i>
+          </button>
+        </div>
+        <div class="nav-list">
+          <button id="list-btn" class="list-btn nav-type-btn">
+            <i class="bi bi-list"></i>
+          </button>
+        </div>
+
+      </div>
+
+      <div id="list" class="nav-list-outer">
+        <div class="nav-type-1 nav-type list-type">
+          <button class="list-type-btn">
+          <p>K-POP</p>
+        </button>
+  
+        </div>
+        <div class="nav-type-2 nav-type list-type">
+          <button class="list-type-btn">
+          <p>J-POP</p>
+        </button>
+  
+        </div>
+        <div class="nav-type-3 nav-type list-type">
+          <button class="list-type-btn">
+          <p>影視</p>
+        </button>
+          
+        </div>
+        <div class="nav-type-4 nav-type list-type">
+          <button class="list-type-btn">
+          <p>其他</p>
+        </button>
+        </div>  
+
+      </div>
+      
+    </div>
+  </nav>
+
+  <main>
+    <div class="news-main-outer">
+      <div class="news-title-outer">
+        <h1>KPOP 四大天團齊發新專輯！TXT、aespa、The Boyz、Boynextdoor 盛大回歸，12 月首場單獨演唱會震撼樂迷</h1>
+	</div>
+
+      <div class="news-content-outer">
+
+        <div class="news-info-outer">
+          <p class="news-content-type">K-POP</p>
+          <p class="news-date">25/9/2099</p>
+        </div>
+	<p>TOMORROW X TOGETHER（韓文：투모로우바이투게더）將於11月4日推出第七張迷你專輯《The Star Chapter: Sanctuary》。這是該團第四個系列的首張專輯，繼《夢》、《混亂》和《名字》之後。</p>
+<p>該團的上一張迷你專輯《minisode 3: Tomorrow》發行已經七個月了，銷量超過一百萬張，並在國內音樂榜單上橫掃各大榜單。第六張迷你專輯在告示牌二百大專輯榜上排名第三，並在主專輯榜上停留了三周，之後在六月重新進入榜單，排名第111位。</p>
+<p>近期，該團在台北舉行了演唱會，結束了為期數月的國際巡演。該巡演在17個城市舉行了28場演唱會。下月，該團將在首爾和大阪舉行安可演唱會。</p>
+<h2>個人歌曲即將由 aespa 推出</h2>
+<p>aespa（에스파）成員在第二次單獨演唱會上演唱的個人歌曲將於周三以數字單曲的形式發行。數字單曲《Synk: Parallel Line》將包含四首歌曲：</p>
+<ul>
+<li>Karina 的《Up》</li>
+<li>Gisele 的《Dopamine》</li>
+<li>Ning Ning 的《Bored!》</li>
+<li>Winter 的《Spark》</li>
+</ul>
+<p>Karina 參與了她那首嘻哈舞曲的歌詞創作，Gisele 則參與了她那首 R&B 曲目的創作，該曲目表達了戀愛中的人的情感。Ning Ning 和 Winter 也參與了她們個人音樂的創作。</p>
+該團將於10月21日發行第五張迷你專輯《Whiplash》。該團的第一張完整專輯《Armageddon》的主打曲《Supernova》仍在音樂榜單上保持強勢，曾在 Melon 音樂榜上停留了20年歷史上最長時間。<h2>The Boyz 將發行第九張迷你專輯</h2>
+<p>The Boyz（더보이즈）將於10月28日發行第九張迷你專輯《Trigger》。這張專輯的名稱以中文字符寫在專輯封面上，專輯封面圖片已經公布。</p>
+<p>距離他們完成第二張錄音室專輯僅七個月，這張專輯分為三部分發行。在發行該系列專輯後，該團啟動了第三次國際巡演《Zeneration II》，訪問了世界各地15個城市。該巡演的最終場於9月23日在大阪舉行。</p>
+<h2>首次世界巡演詳情出爐！Boynextdoor 公布巡演安排</h2>
+<p>根據KOZ娛樂公司的公告，Boynextdoor 將於12月舉行首場單獨演唱會。這次演唱會名為「Knock On Vol. 1」，將於12月14日至15日在仁川舉行，為期兩天。兩天的演出均會在線直播。</p>
+<p>接下來，Boynextdoor 將於1月30日在東京開始亞洲巡演，之後將訪問日本的其他五個城市。巡演將於4月中旬結束，途經新加坡、馬尼拉、曼谷、台北、香港和雅加達。</p>
+<p>這次演唱會的期待很高，尤其是在上個月發行的第三張迷你專輯「19.99」登上了告示牌二百大專輯榜的第40位，創下了該組合的最高紀錄，並登上了Oricon的每日、每週和每週綜合專輯排行榜的榜首。</p>
+
+<div class ="news-vid-outer">
+<div class="related-vid-text-outer title-bar ">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/ebMcJyTJBfI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<p class="related-vid-text">相關影片：</p>
+</div>
+
+<p class="news-text-inner">資料來源： Korea Herald</p>
+</div>
+</div>
+</main>
+
+
+ <footer class="footer">
+    <div class="footer-outer">
+
+
+      <div class="footer-up-outer">
+        <div class="footer-right-name-box">
+          <img class="famechos-logo-footer" src="../img/famechos_logo.png">
+        </div>
+        <div class="footer-right-text-box">
+          <p class="footer-right-text">每日為你提供最新、最全面的日韓資訊。</p>
+        </div>
+        <div class="footer-button-box">
+          <button class="facebook-btn footer-btn">
+            <i class="bi bi-facebook footer-logo"></i>
+          </button>
+          <button class="ig-btn footer-btn">
+            <i class="bi bi-instagram footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-twitter-x footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-envelope-fill footer-logo"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="footer-down-outer">
+        <div class="kpop-footer-box footer-box">
+          <p class="footer-text">K-POP</p>
+        </div>
+        <div class="jpop-footer-box footer-box">
+          <p class="footer-text">J-POP</p>
+        </div>
+        <div class="drama-footer-box footer-box">
+          <p class="footer-text">影視</p>
+        </div>
+        <div class="other-footer-box footer-box">
+          <p class="footer-text">其他</p>
+        </div>
+
+
+      </div>
+
+      <div class="copyright-outer">
+        <p class="copyright-text">
+          Copyright © 2024 by <strong>Famechos.me</strong> All Rights Reserved.
+        </p>
+      </div>
+
+      
+    </div>
+
+
+
+  </footer>
+
+<script src="../nav-list.js"></script>
+
+</body>
+</html>
