@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Tue, 08 Oct 2024 12:09:47 +0800</lastBuildDate>
+  <lastBuildDate>Tue, 08 Oct 2024 12:12:32 +0800</lastBuildDate>
 
   <item>
   <title>G-Dragon終於打破沉默！將在《劉QUIZ ON THE BLOCK》首次亮相，分享BIGBANG歲月、毒品風波和音樂復出計劃</title>
@@ -57,5 +57,10 @@
   <link>https://www.famechos.me/news/K-pop巨頭CEO國會聽證會上被追問！榜單操縱、過度消費、舞蹈編排剝削...問題多多/</link>
   <description>K-pop巨頭CEO國會聽證會上被追問！榜單操縱、過度消費、舞蹈編排剝削...問題多多</description>
   <pubDate>Tue, 08 Oct 2024 12:09:47 +0800</pubDate>
+</item><item>
+  <title>KPOP 四大天團齊發新專輯！TXT、aespa、The Boyz、Boynextdoor 盛大回歸，12 月首場單獨演唱會震撼樂迷</title>
+  <link>https://www.famechos.me/news/KPOP 四大天團齊發新專輯！TXT、aespa、The Boyz、Boynextdoor 盛大回歸，12 月首場單獨演唱會震撼樂迷/</link>
+  <description>KPOP 四大天團齊發新專輯！TXT、aespa、The Boyz、Boynextdoor 盛大回歸，12 月首場單獨演唱會震撼樂迷</description>
+  <pubDate>Tue, 08 Oct 2024 12:12:32 +0800</pubDate>
 </item></channel>
 </rss>
