@@ -66,4 +66,10 @@
     <ns0:changefreq>weekly</ns0:changefreq>
     <ns0:priority>0.90</ns0:priority>
   </ns0:url>
+<ns0:url>
+    <ns0:loc>https://www.famechos.me/news/KPOP 四大天團齊發新專輯！TXT、aespa、The Boyz、Boynextdoor 盛大回歸，12 月首場單獨演唱會震撼樂迷/</ns0:loc>
+    <ns0:lastmod>2024-10-08T12:12:32+08:00</ns0:lastmod>
+    <ns0:changefreq>weekly</ns0:changefreq>
+    <ns0:priority>0.90</ns0:priority>
+  </ns0:url>
 </ns0:urlset>
