@@ -41,3 +41,4 @@ https://www.koreaherald.com/view.php?ud=20241004050550
 https://www.koreaherald.com/view.php?ud=20241004050494
 https://www.koreaherald.com/view.php?ud=20241004050492
 https://www.koreaherald.com/view.php?ud=20241004050493
+https://www.koreaherald.com/view.php?ud=20241007050694
